<resources>
    <string name="app_name" translatable="false">karabiineri</string>

    <string name="nearest_place">Lähin kiipeilypaikka</string>
    <string name="add_place">Lisää kiipeilypaikka</string>
    <string name="settings">Asetukset</string>
    <string name="help">Apua</string>
    <string name="feedback">Anna Palautetta</string>

    <!--    Places         -->
    <string name="title">NIMI</string>
    <string name="routes_diff">REITTIEN TASO</string>
    <string name="routes_count">REITTIEN MÄÄRÄ</string>
    <string name="route_types">REITTITYYPIT</string>
    <string name="route_count">REITTIEN MÄÄRÄ</string>
    <string name="desc">KUVAUS</string>
    <string name="access">PÄÄSY PAIKKAAN</string>
    <string name="ar">AR</string>

    <!--    Edit place      -->
    <string name="toprope">yläköysi</string>
    <string name="lead">alaköysi</string>
    <string name="route_diff_start">helpoin</string>
    <string name="route_diff_end">vaikein</string>

    <string name="marker_text">Lisää paikan tiedot</string>
    <string name="name_hint">Paikan nimi</string>
    <string name="desc_hint">Kuvaus paikasta</string>
    <string name="access_hint">Miten paikalle pääsee?</string>

    <!--    ??      -->
    <string name="save">TALLENNA</string>
    <string name="back">TAKAISIN</string>

    <!-- Route Info -->
    <string name="route_name">Reitin nimi</string>
    <string name="route_diff">Reitin vaikeusaste</string>
    <string name="route_type">Reitin tyyppi</string>
    <string name="boulder">Boulder</string>
    <string name="sport">Sport</string>
    <string name="trad">Traditional</string>
    <string name="onehold">Yhden käden aloitus</string>
    <string name="twoholds">Kahden käden aloitus</string>
    <string name="sitstart">Aloitus istualtaan</string>
    <string name="topout">Lopetus kiven/kallion päälle</string>
    <string name="notes">Lisätiedot</string>

    <string name="nameless_route">Nimetön reitti</string>
    <string name="grade_6a">6a</string>

    <!-- Modes -->
    <string name="add_route">Lisää uusi reitti klikkaamalla aloituskohtaa</string>
    <string name="edit_route">Muokkaa reittiä</string>
    <string name="route_active">Reitti aktiivisena</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Sijaintidata tarvitaan sijainnin näyttämiseen kartalla.</string>
    <string name="location_permission_denied">Sovellus tarvitsee luvan sijainnin käyttämiseen.</string>
    <string name="permission_required_toast">Lupa sijainnin käyttämiseen tarvitaan tämän toiminnon toteuttamiseksi.</string>
</resources>
