<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/drawer_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_place"
            android:title="@string/add_place"
            android:icon="@drawable/ic_add"/>
    </group>

    <group
        android:id="@+id/drawer_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/help"
            android:icon="@drawable/ic_help"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_announcement"/>
    </group>
</menu>